--- a/css/style.css
+++ b/css/style.css
@@ -147,8 +147,8 @@ header .follow a:hover {
 
 .cursor1 {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -5rem;
+    left: -5rem;
     height: 1rem;
     width: 1rem;
     background-color: var(--main-color);
@@ -166,8 +166,8 @@ header .follow a:hover {
 
 .cursor2 {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -4rem;
+    left: -4rem;
     height: 4rem;
     width: 4rem;
     border: .1rem solid var(--main-color);
@@ -914,6 +914,9 @@ header .follow a:hover {
     color: var(--main-color);
 }
 
+.Sdate, #stopClockSound {
+    cursor: pointer;
+}
 
 
 
@@ -986,6 +989,7 @@ header .follow a:hover {
 
     .Sdate {
         font-size: 2rem;
+        cursor: pointer;
     }
 }
 
